# floship-llm

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLOUDFRONT_WAF_SUMMARY.md  CONTRIBUTING.md  COVERAGE_SUCCESS.md  EMBEDDINGS_FEATURE.md  GITHUB_WEBHOOK_WAF_FIX.md  HEROKU_API_CONSTRAINTS.md  LICENSE  LIVE_API_TESTING_RESULTS.md  MIGRATION_GUIDE.md  PRE_COMMIT_SETUP.md  PRE_COMMIT_STRICT.md  README.md  REFACTORING_SUMMARY.md  RELEASE_v0.5.0.md  RETRY_IMPLEMENTATION.md  SECURITY.md  STREAMING_GUIDE.md  TOOLS_IMPLEMENTATION.md  TOOL_DELAY_FEATURE.md  TOOL_TRACKING_IMPLEMENTATION.md  UV_LOCK_AUTOMATION.md  commit_msg.txt  example_cloudfront_waf.py  example_embeddings.py  example_stream_with_tools.py  examples.py  examples_streaming.py  examples_tools.py  pyproject.toml  pyrightconfig.json  requirements.txt  skills-lock.json  test_heroku_api.py  test_retry.py  test_retry_scenarios.py
.github/: agents.md
docs/: NATIVE_GEMINI_MIGRATION_PLAN.md
floship_llm/: __init__.py  client.py  content_processor.py  google_cache_manager.py  retry_handler.py  schemas.py  tool_manager.py  utils.py
floship_llm/backends/: __init__.py  base.py  native_gemini.py  openai_compat.py
scripts/: check_version.py  check_version_bump_reminder.py
tests/: __init__.py  conftest.py  test_backends.py  test_client.py  test_client_errors.py  test_cloudfront_waf.py  test_content_processor.py  test_context_caching.py  test_django_html_sanitization.py  test_embeddings.py  test_extended_thinking_retry.py  test_external_request_blocker.py  test_google_cache_manager.py  test_init.py  test_loop_prevention.py  test_multimodal.py  test_native_features.py  test_native_gemini.py  test_openrouter.py  test_retry.py  test_retry_handler.py  test_schemas.py  test_streaming_processing.py  test_system_prompt_duplication.py  test_tool_arguments_sanitization.py  test_tool_delay.py  test_tool_serialization.py  test_tools.py  test_utils.py  test_verbosity.py  test_vertex_ai.py  test_waf_protection.py
