[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floship-llm"
version = "0.5.10"
description = "A reusable LLM client library for interacting with OpenAI-compatible inference endpoints"
readme = "README.md"
authors = [
    {name = "Floship", email = "dev@floship.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8.1"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "coverage[toml]>=7.0.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=23.0.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    "bandit[toml]>=1.7.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "safety>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/floship/floship-llm"
Repository = "https://github.com/floship/floship-llm"
Issues = "https://github.com/floship/floship-llm/issues"

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E501",    # line too long (handled by black)
    "W503",    # line break before binary operator
    "C901",    # too complex
    "B017",    # assertRaises(Exception) - acceptable in tests
    "B023",    # function definition does not bind loop variable
    "SIM102",  # use single if-statement
    "SIM105",  # use contextlib.suppress
    "SIM114",  # combine if branches
    "SIM117",  # use single with statement
    "SIM910",  # use dict.get() without None
    "F401",    # imported but unused (handled by isort/autoflake)
]
per-file-ignores = [
    "tests/*:B017,SIM117",
    "examples*.py:C0415",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=floship_llm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=99",
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["floship_llm"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true

# Exclude patterns
exclude = [
    "examples.py",
    "examples_tools.py",
    "test_retry.py",
    "test_retry_scenarios.py",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "examples",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - not using paramiko
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long (handled by black)
    "C0302",  # too-many-lines
    "C0415",  # import-outside-toplevel (needed for optional imports)
    "E0401",  # import-error (dependencies installed at runtime)
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "R0903",  # too-few-public-methods
    "R0902",  # too-many-instance-attributes
    "R0904",  # too-many-public-methods
    "R1705",  # no-else-return
    "R1710",  # inconsistent-return-statements
    "R1722",  # consider-using-sys-exit
    "R1723",  # no-else-break
    "R1724",  # no-else-continue
    "W0201",  # attribute-defined-outside-init
    "W0212",  # protected-access
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "W0621",  # redefined-outer-name
    "W0613",  # unused-argument
    "W0622",  # redefined-builtin
    "W0640",  # cell-var-from-loop
    "W0707",  # raise-missing-from
    "W1203",  # logging-fstring-interpolation
    "W1309",  # f-string-without-interpolation
]
good-names = ["i", "j", "k", "x", "y", "z", "id", "tc", "llm", "_", "e", "np"]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D415",  # First line should end with a period
]
