[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floship-llm"
version = "0.5.30"
description = "A reusable LLM client library for interacting with OpenAI-compatible inference endpoints"
readme = "README.md"
authors = [
    {name = "Floship", email = "dev@floship.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8.1"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage[toml]>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/floship/floship-llm"
Repository = "https://github.com/floship/floship-llm"
Issues = "https://github.com/floship/floship-llm/issues"

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B017",     # assertRaises(Exception) - acceptable in tests
    "B023",     # function definition does not bind loop variable
    "B904",     # raise-without-from-inside-except (intentional in some cases)
    "SIM102",   # use single if-statement
    "SIM103",   # return condition directly
    "SIM105",   # use contextlib.suppress
    "SIM114",   # combine if branches
    "SIM117",   # use single with statement
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparison
    "PLW0603",  # global statement
    "PLR0911",  # too many return statements
    "PLR0914",  # too many local variables
    "PLR0917",  # too many positional arguments
    "PLC0415",  # import outside top-level (needed for lazy imports)
    "RUF012",   # mutable class attribute annotation
    "ARG001",   # unused function argument
    "ARG002",   # unused method argument
    "ARG003",   # unused class method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "SIM117", "ARG001", "PLR2004"]
"examples*.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["floship_llm"]
combine-as-imports = true
force-wrap-aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=floship_llm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Coverage target: 81% (remaining gaps are complex error handling paths)
    "--cov-fail-under=81",
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["floship_llm"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Disable specific checks that require extensive refactoring
disable_error_code = [
    "var-annotated",
    "return-value",
    "union-attr",
    "arg-type",
]

# Exclude patterns
exclude = [
    "examples.py",
    "examples_tools.py",
    "example_*.py",
    "test_retry.py",
    "test_retry_scenarios.py",
]
